<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_item0"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/Categories" />
        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/ic_local_offer_black_24dp"
            android:title="@string/item_1" />
        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/ic_smartphone_black_24dp"
            android:title="@string/item_2" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/ic_wc_black_24dp"
            android:title="@string/item_3" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/ic_local_dining_black_24dp"
            android:title="@string/item_4" />

        <item
            android:id="@+id/nav_item6"
            android:icon="@drawable/ic_more_black_24dp"
            android:title="@string/calculator" />
    </group>

    <item android:title="@string/my_profile">
        <menu>
            <item
                android:id="@+id/my_profile"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/my_profile" />
            <item
                android:id="@+id/my_orders"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="@string/my_orders" />
            <item
                android:id="@+id/my_wishlist"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/my_wishlist" />


        </menu>
    </item>

    <item android:title="Help And Support">
        <menu>
            <item
                android:id="@+id/setting"
                android:title="@string/setting" />
            <item
                android:id="@+id/feedback"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/terms_conditions"
                android:title="@string/terms_conditions" />
            <item
                android:id="@+id/nav_logout"
                android:title="Logout" />

        </menu>
    </item>

</menu>
